--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Cek Khodam Online</h1>
         <p>Masukkan nama anda untuk melihat apakah anda memiliki Khodam.</p>
         <input type="text" id="nameInput" placeholder="Masukkan nama anda">
-        <button onclick="checkKhodam()">Cek Khodam</button>
+        <button id="checkButton" onclick="checkKhodam()">Cek Khodam</button>
         <div id="result"></div>
         <button id="resetButton" onclick="resetForm()">Reset</button>
     </div>
